# cdr_automated

./: .env.example  .gitignore  Cargo.toml  MIT-LICENSE  README.md
src/: db.rs  main.rs  parse.rs  utils.rs
