[package]
name = "cdr_automated"
authors = ["Roy Chanunkha <roychanunkha@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gz = "0.4.0"
mysql = "23.0.1"
rayon = "1.6.1"
notify = "5.1.0"
dotenv = "0.15.0"
